packages/ducktools-classbuilder/ducktools_classbuilder-0.9.1.tar.gz/ducktools_classbuilder-0.9.1/tests/prefab/shared/examples/fails/inheritance_2.py
from ducktools.classbuilder.prefab import prefab, attribute


@prefab
class B:
    x: int
    y: int


@prefab
class C(B):
    x: int = 2
